# SQLMap-GUI

./: .gitignore  README.md  main.py  main_window.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
core/: worker.py
resources/: help_content.py  style.py
widgets/: base_tab.py  command_preview.py  enumeration_tab.py  general_tab.py  help_dialog.py  injection_tab.py  os_tab.py  output_panel.py  request_tab.py  target_tab.py
