[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmap-pro-gui"
version = "2.0.0"
description = "Professional PyQt6 graphical interface for sqlmap"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["sqlmap", "sql-injection", "security", "pentest", "gui"]

authors = [
    {name = "RootX", email = "rootx.202@example.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "PyQt6",
]

[project.urls]
Homepage = "https://github.com/Rootx202/SQLMap-GUI"
Repository = "https://github.com/Rootx202/SQLMap-GUI"
Tracker = "https://github.com/Rootx202/SQLMap-GUI/issues"

[project.scripts]
sqlmap-gui = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "resources*", "widgets*"]

[tool.setuptools]
py-modules = ["main", "main_window"]
